--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "thirdweb": "^5.75.0"
+    "thirdweb": "^5.75.0",
+    "@stripe/stripe-js": "^4.4.0",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
